Fix formatting and spacing in style.css

--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ nav li{
     .upper-heading{
         font-size: 1.8rem;
         letter-spacing: 2.5px;
-        margin-top: -30px;
+        margin-top: -50px;
     }
     .hero-section{
         flex-direction: column-reverse;
@@ -108,9 +108,10 @@ nav li{
         font-size: 1rem;
     }
     .button{
-        margin: 20px 0;
+        margin-top: 20px;
     }
 }
+
 
 
 
